[metadata]
name = jwt_tool
version = 2.2.6
author = ticarpi
license = GPL-3.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KptCheeseWhiz/jwt_tool

[options]
py_modules = jwt_tool
python_requires = >=3.0
install_requires = 
    termcolor
    cprint
    pycryptodomex
    requests

[options.entry_points]
console_scripts =
    jwt-tool = jwt_tool:main
